//
// File: core_messages.proto
// Overview: This file defines messages used by multiple proto files.
//

syntax = "proto3";

// Message structure for basic response information
message ResponseInfo {
	bool response_success = 1;  // Indicates if the operation was successful
	string response_message = 2;  // Message providing additional information
}

// Message structure for core node telemetry
message NodeTelemetry {
	uint64 time_stamp = 1;  // Timestamp of telemetry data
	uint32 active_threads = 2;  // Number of active threads
	uint32 active_conns = 3;  // Number of active connections
}

// Message structure for session information
message SessionInfo {
	string session_id = 1;  // Stream session ID for file transfer
	string session_checksum = 2;  // Time-dependent checksum for session integrity
}
